# dac-migration-dss-popupsim

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGES_SUMMARY.md  COMPLETE_INTEGRATION_PICTURE.md  INTEGRATION_COMPLETE.md  MINIMAL_INTEGRATION_PLAN.md  README.md  REFACTORING_EXAMPLE.md  RETROFIT_WORKFLOW_STATUS.md  SECURITY.md  SEPARATION_OF_CONCERNS_SUMMARY.md  TRAIN_ARRIVAL_WIRING.md  index.html  mkdocs.yml  output_log.txt  pyproject.toml  run_dashboard.bat  run_dashboard_v2.bat  test
.github/: copilot-instructions.md  (+2 more)
popupsim/backend/: README.md  __init__.py  mypy.ini  pyproject.toml
popupsim/backend/docs/: capacity_handling.md
popupsim/backend/examples/: EXAMPLES_STATUS.md  capacity_demo.py  multi_track_demo.py  multi_track_strategies.md  simple_test_demo.py  test_20_wagons.py  test_predictable.py  track_selection_demo.py  wagon_pickup_demo.py
popupsim/backend/src/: __init__.py  main.py  main_new.py
popupsim/backend/src/MVP/: __init__.py  main_mvp.py
popupsim/backend/src/analytics/: __init__.py
popupsim/backend/src/analytics/application/: async_analytics_service.py  location_tracker.py  metrics_aggregator.py  metrics_queue.py
popupsim/backend/src/analytics/collectors/: __init__.py  metrics.py  time_series.py  wagon.py
popupsim/backend/src/analytics/domain/: exceptions.py
popupsim/backend/src/analytics/kpi/: __init__.py  calculator.py
popupsim/backend/src/analytics/models/: __init__.py  kpi_result.py
popupsim/backend/src/analytics/reporting/: __init__.py  csv_exporter.py  statistics.py  visualizer.py
popupsim/backend/src/application/: __init__.py  context_registry.py  optimizer.py  process_coordinator.py  simulation_service.py  workflow_strategy.py
popupsim/backend/src/builders/: __init__.py  scenario_builder.py  tracks_builder.py  train_list_builder.py
popupsim/backend/src/configuration/: __init__.py  model.py  model_route.py  model_routes.py  model_scenario.py  model_track.py  model_train.py  model_wagon.py  model_workshop.py  service.py  validation.py
popupsim/backend/src/configuration/application/: scenario_builder.py  scenario_loader.py  scenario_service.py
popupsim/backend/src/configuration/domain/: exceptions.py
popupsim/backend/src/contexts/: __init__.py
popupsim/backend/src/contexts/analytics/: __init__.py
popupsim/backend/src/contexts/configuration/: __init__.py
popupsim/backend/src/contexts/external_trains/: __init__.py
popupsim/backend/src/contexts/popup_retrofit/: .mypy.ini  __init__.py
popupsim/backend/src/contexts/railway_infrastructure/: __init__.py
popupsim/backend/src/contexts/retrofit_workflow/: __init__.py
popupsim/backend/src/contexts/shunting_operations/: __init__.py
popupsim/backend/src/contexts/yard_operations/: __init__.py
popupsim/backend/src/core/: __init__.py
popupsim/backend/src/core/i18n/: README.md  __init__.py  decorators.py  localizer.py
popupsim/backend/src/core/logging/: README.md  __init__.py  async_logger.py  formatters.py  handlers.py  logger.py  protocols.py
popupsim/backend/src/domain/: __init__.py  locomotive_operations.py  wagon_operations.py  workshop_operations.py
popupsim/backend/src/external_trains/application/: external_trains_context.py  train_arrival_coordinator.py
popupsim/backend/src/infrastructure/event_bus/: __init__.py  event_bus.py
popupsim/backend/src/infrastructure/events/: __init__.py  base_event.py
popupsim/backend/src/infrastructure/logging/: __init__.py  process_logger.py
popupsim/backend/src/infrastructure/tracking/: __init__.py  process_export.py  process_integration_example.py  process_tracker.py  process_tracking_mixin.py  state_tracker.py  unified_resource_tracker.py  unified_tracking_mixin.py  wagon_process_tracker.py
popupsim/backend/src/models/: locomotive.py  process_times.py  routes.py  scenario.py  topology.py  track.py  train.py  wagon.py  workshop.py
popupsim/backend/src/optimizer/: harness.py  parameter_model.py  problem_space.py  summary_model.py  util.py
popupsim/backend/src/popup_retrofit/: __init__.py  integration_example.py
popupsim/backend/src/popup_retrofit/application/: __init__.py  popup_context.py
popupsim/backend/src/popup_retrofit/domain/: __init__.py
popupsim/backend/src/shunting_operations/: __init__.py  integration_example.py
popupsim/backend/src/simulation/: __init__.py  jobs.py  popupsim.py  resource_pool.py  route_finder.py  scenario.py  scenariosim.py  services.py  sim_adapter.py  track_capacity.py  wagon_operations.py  workshop_capacity.py
popupsim/backend/src/simulation_hex/: __init__.py
popupsim/backend/src/validators/: __init__.py  scenario_validation.py
popupsim/backend/src/yard_operations/: __init__.py
popupsim/backend/tests/: __init__.py  conftest.py
popupsim/backend/tests/MVP/: conftest.py
popupsim/backend/tests/fixtures/: locomotive.json  process_times.json  routes.json  scenario.json  test_train_schedule.csv  topology.json  tracks.json  workshops.json  yard.json
popupsim/backend/tests/unit/: TIMELINE_VALIDATOR_USAGE.md  __init__.py  sequence_validator.py  test_configuration_service.py  test_helpers.py  test_main.py  test_metrics_output.py  test_model_route.py  test_model_routes.py  test_model_scenario.py  test_model_track.py  test_model_train.py  test_model_wagon.py  test_model_workshop.py  test_popupsim.py  test_route_duration_validation.py  test_scenario_train_schedule_loader.py  test_scenariosim.py  test_sequence_example.py  test_service.py  test_sim_adapter.py  test_sim_popupsim.py  test_sim_scenario.py  test_timeline_example.py  test_train_movement_aggregate.py  test_validation.py  test_validation_scenarios.py  timeline_validator.py
popupsim/backend/tests/validation/: __init__.py  export_scenario.py  implementation_comparator.py  retrofit_timeline_validator.py  scenario_builder.py  test_layered_scenarios.py  test_layered_timelines.py  test_retrofit_timeline_validation.py  test_retrofit_workflow_scenarios.py  test_retrofit_workflow_validation.py  test_scenario_builder.py  test_simple_validation.py  test_timeline_scenarios.py  timeline_validator.py
(+1602 files in other folders)
