[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "popupsim"
version = "0.1.0"
description = "PopUpSim - DAC Migration Simulation Tool"
authors = [{name = "PopUpSim Team", email = "team@popupsim.org"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "simpy>=4.0.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pylint>=3.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
popupsim = "popupsim.backend.src.main:main"

[tool.setuptools.packages.find]
where = ["popupsim/backend/src"]

[tool.pytest.ini_options]
testpaths = ["popupsim/backend/tests"]
pythonpath = ["popupsim/backend/src"]
norecursedirs = ["*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__", "MVP"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--no-cov",
    "-p", "no:benchmark"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.mypy]
python_version = "3.13"
mypy_path = "popupsim/backend/src"
packages = ["popupsim.backend.src"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["popupsim/backend/src"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "COM812", "ISC001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pylint.main]
init-hook = 'import sys; sys.path.append("popupsim/backend/src")'
source-roots = ["popupsim/backend/src"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "R0903", "R0913", "W0613"]

[tool.coverage.run]
source = ["popupsim/backend/src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]